--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.16)
-project(cpp_feedhandler LANGUAGES CXX)
+project(cpp-multicast-udp-feedhandler LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
-add_executable(feedhandler src/main.cpp)
+add_executable(cpp-multicast-udp-feedhandler_exe src/main.cpp)
